tests/baselines/reference/mergedDeclarations3.errors.txt
==== tests/cases/compiler/mergedDeclarations3.ts (2 errors) ====
    module M {
     export enum Color {
       Red, Green
     }
    }
    module M {
     export module Color {
       export var Blue = 4;
      }
    }
    var p = M.Color.Blue; // ok
    
    module M {
        export function foo() {
        }
    }
    
    module M {
        module foo {
            export var x = 1;
        }
    }
    
    module M {
        export module foo {
            export var y = 2
        }
    }
    
    module M {
        module foo {
            export var z = 1;
        }
    }
    
    M.foo() // ok
    M.foo.x // error
          ~
!!! error TS2094: The property 'x' does not exist on value of type 'typeof M.foo'.
    M.foo.y // ok
    M.foo.z // error
          ~
!!! error TS2094: The property 'z' does not exist on value of type 'typeof M.foo'.